# E-commerce

./: .gitignore  README.md  db.sqlite3  opp-db.sqlite3  pyproject.toml  requirements.txt
api/: urls.py
api/serializers/: base.py  cart.py  order.py  product.py  user.py
api/utils/: helpers.py
api/views/: cart.py  home.py  orders.py  product.py  user.py
mystore/: settings.py  urls.py
store/: admin.py
store/models/: __init__.py  cart.py  order.py  product.py  user.py
templates/: home.html
user/: admin.py  models.py
user/models/: __init__.py  cart.py  product.py  user.py
